objects/advpm__Advologix_Global_List_Options__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>System settings used by Advologix internally.</description>
    <fields>
        <fullName>advpm__Controller_Type__c</fullName>
        <label>Controller Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>advpm__Disabled_Key_Date_Field_Name__c</fullName>
        <label>Disabled Key Date Field Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>advpm__Enabled_Matter_Participant_Lookup_Field__c</fullName>
        <label>Enabled Matter Participant Lookup Field</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>advpm__Inactive_Label_Value__c</fullName>
        <label>Inactive Label Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>advpm__User_ID__c</fullName>
        <label>User ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Advologix Global Options (List)</label>
</CustomObject>